--- a/docker/roadrunner/Dockerfile
+++ b/docker/roadrunner/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:8.2-fpm
+FROM php:8.2-cli
 
 ENV DEBIAN_FRONTEND noninteractive
 
@@ -23,8 +23,8 @@ RUN apt-get update --allow-releaseinfo-change \
     && apt-get -y autoclean && apt-get -y autoremove && apt-get -y clean \
     && rm -rf /var/lib/apt/lists/* \
     && docker-php-ext-configure pgsql -with-pgsql=/usr/local/pgsql \
-    && docker-php-ext-install pdo_pgsql pgsql zip xsl gd intl opcache exif calendar soap sockets \
-    && pecl install xdebug \
-    && docker-php-ext-enable xdebug
+    && docker-php-ext-install pdo_pgsql pgsql zip xsl gd intl opcache exif calendar soap sockets
 
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
+
+COPY --from=spiralscout/roadrunner:latest /usr/bin/rr /usr/bin/rr
